bin_PROGRAMS = fwunpack

fwunpack_SOURCES =	src/encryption.cpp src/fwunpack.cpp src/get_encrypted_data.cpp \
			src/get_normal_data.cpp src/keydata.cpp src/lz77.cpp src/nds_types.h \
			src/part345_comp.h src/encryption.h src/get_data.h src/get_encrypted_data.h \
			src/get_normal_data.h src/keydata.h lz77.h src/part345_comp.cpp

